# fed-prediction-agent-system-public

./: .env.example  .gitignore  AGENTS.md  README.md  RESULTS.md  data_registry.yaml  pyproject.toml
.github/workflows/: tests.yml
configs/: first_version.json  fred_api.md  policy_sources.json
examples/public_eval/: baseline_results.json  event_counterfactual_result.json  fomc_quarter_labels_2000_2026.csv  forecasting_comparison.json  fred_macro_quarterly_2000_2026.csv  fred_macro_sample_2020_2024.csv  local_adapter_result_card.json  public_rerun_manifest.json  public_training_debug_manifest.json
policy_personas/warsh_policy/: SKILL.md
scripts/: generate_public_results.py  run_public_eval_protocol.py  run_public_event_counterfactual.py  run_public_training_debug_protocol.py  run_var_pipeline.py  smoke_hardening.py  smoke_realtime_pipeline.py  verify_first_version.py
src/agents/: __init__.py  langchain_runtime.py  runtime_support.py
src/data_engineering/: __init__.py  build_context_snapshots.py  build_coverage_audit.py  build_policy_events.py  build_policy_inventory.py  build_rag_index.py  build_strategy_cards.py  build_us_macro_panel.py  build_wdi_top100.py  build_weo_panel.py  config.py  download_bulk.py  download_fred_macro.py  http_utils.py  rag_demo.py  run_mvp.py  source_monitor.py
src/fed_game/: __init__.py  cli.py  (+15 more)
tests/: conftest.py  test_event_pipeline.py  test_langchain_runtime.py  test_model_correctness_smoke.py  test_persona_game.py  test_public_imports.py  test_public_results_artifacts.py  test_source_monitor.py  test_training_eval_contracts.py
(+24 files in other folders)
